<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/user_name_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/passStringLabel"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="126dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/passswordEditText"
        android:layout_alignLeft="@+id/passswordEditText"
        android:layout_alignStart="@+id/passswordEditText" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/password_label"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="141dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_alignBottom="@+id/userNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/passswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/usernameText"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="141dp"
        tools:layout_editor_absoluteX="126dp"
        android:layout_alignBottom="@+id/userNameLabel"
        android:layout_toRightOf="@+id/userNameLabel"
        android:layout_toEndOf="@+id/userNameLabel"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_below="@+id/userNameEditText"
        android:layout_alignLeft="@+id/userNameEditText"
        android:layout_alignStart="@+id/userNameEditText"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_alignRight="@+id/userNameEditText"
        android:layout_alignEnd="@+id/userNameEditText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/signUp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_toLeftOf="@+id/userNameEditText"
        android:layout_toStartOf="@+id/userNameEditText" />
</RelativeLayout>
