<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acarreiro_cc.finalapp.signupactivity">

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/user_name_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/passswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text=" "
        android:textSize="20sp"
        tools:layout_editor_absoluteY="141dp"
        tools:layout_editor_absoluteX="126dp"
        android:layout_alignBottom="@+id/userNameLabel"
        android:layout_toRightOf="@+id/userNameLabel"
        android:layout_toEndOf="@+id/userNameLabel"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:text="@string/password_label"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="141dp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text=" "
        android:textSize="20sp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="126dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/passswordEditText"
        android:layout_alignLeft="@+id/passswordEditText"
        android:layout_alignStart="@+id/passswordEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/email_label"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="141dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fullNameLabel"
        android:layout_alignLeft="@+id/userNameEditText"
        android:layout_alignStart="@+id/userNameEditText"
        android:ems="8"
        android:inputType="textEmailAddress"
        android:text=""
        android:textSize="20sp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fullName_label"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="141dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text=" "
        android:textSize="20sp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignBottom="@+id/fullNameLabel"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/signUp"
        android:textSize="20sp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/fullNameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
